fix: hide overflow of logo

--- a/src/client/components/SmallScreen/index.css
+++ b/src/client/components/SmallScreen/index.css
@@ -20,6 +20,7 @@
     width: 100vw;
 
     background-color: white;
+    overflow: hidden;
 }
 
 .smallscreen .header img {
